--- a/generator-app/package.json
+++ b/generator-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.55",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "node-sass": "^4.11.0",
     "prop-types": "latest",
     "react": "^16.8.4",
@@ -26,6 +28,6 @@
   ],
   "devDependencies": {
     "@material-ui/core": "^3.9.3",
-    "material-ui": "^0.20.2"
+    "material-ui": "^1.0.0-beta.47"
   }
 }
