--- a/generator-app/package.json
+++ b/generator-app/package.json
@@ -28,6 +28,7 @@
   ],
   "devDependencies": {
     "@material-ui/core": "^3.9.3",
+    "material-design-icons": "^3.0.1",
     "material-ui": "^1.0.0-beta.47"
   }
 }
