--- a/generator-app/package.json
+++ b/generator-app/package.json
@@ -15,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write './src/**/*.jsx'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@material-ui/core": "^3.9.3",
     "material-design-icons": "^3.0.1",
-    "material-ui": "^1.0.0-beta.47"
+    "material-ui": "^1.0.0-beta.47",
+    "prettier": "1.17.0"
   }
 }
